--- a/SIP/july.html
+++ b/SIP/july.html
@@ -76,6 +76,10 @@
  <h3>July 17th, 2020. Day 122.<h3> 
         <p>Today I ate some instant noodles and strawberries. I also had two cups of coffee this morning. I played a bunch of chess and watched youtube videos and worked on that map some more. I added the rivers. I took a nap so I would have energy to stay up late for the dnd game. I also cracked open a can of coke (something I don't normally do) and sipped on it while playing. It was fun, my girlfriend ran the game and I spent most of the session trying to acquire butter for puff pastry. My character was unaware that immediately after I left to procure it, another character just conjured the butter making my entire trip to the market (and getting my wallet stolen) completely useless. Oh also I played 3 classical chess games today which took like 40 minutes each. I didn't do very well.
    </p>
+ <h3>July 18th, 2020. Day 123.<h3> 
+   <p>Day 123! I made coffee and ate my last maruchan cup noodle instant lunch. That's ok though. Then I talked with my girlfriend over the phone for 46 minutes, that was nice, I enjoy that. Then I watered the flowers and then laid out some more of that weed guard stuff. I laid about 15 yards I would say, maybe more. There is maybe 10 more yards that I should do but that's the hardest part, there are big plants in the way and I'm not sure how to approach it, I will probably have to get on my hands and knees (so the branches don't hit my face) and I will end up very dirty. Then I worked on that map some more, I added some place names and changed the coastline of one of the continents.
+   </p>
+   
            <section id="downloads">
           
         </section>
