--- a/SIP/july.html
+++ b/SIP/july.html
@@ -79,7 +79,7 @@
  <h3>July 18th, 2020. Day 123.<h3> 
    <p>Day 123! I made coffee and ate my last maruchan cup noodle instant lunch. That's ok though. Then I talked with my girlfriend over the phone for 46 minutes, that was nice, I enjoy that. Then I watered the flowers and then laid out some more of that weed guard stuff. I laid about 15 yards I would say, maybe more. There is maybe 10 more yards that I should do but that's the hardest part, there are big plants in the way and I'm not sure how to approach it, I will probably have to get on my hands and knees (so the branches don't hit my face) and I will end up very dirty. Then I worked on that map some more, I added some place names and changed the coastline of one of the continents.
    </p>
-   <p>Oh I almost forgot to mention I've been playing this game called fire emblem 3 houses on switch and it is really fun what a great game.
+   <p>Oh I almost forgot to mention I've been playing this game called fire emblem 3 houses on switch and it is really fun what a great game. Oh and I made sure I am up to date un my unemployment stuff and I made sure to pay for my classes in Fall 2020. It was weird though my account balance is -4.00 so I somehow have a credit? I must have overpaid last semester by the amount I should have paid this semester AND 4 dollars? That seems unlikely but ok?
    </p>
    
            <section id="downloads">
