--- a/SIP/july.html
+++ b/SIP/july.html
@@ -81,7 +81,9 @@
    </p>
    <p>Oh I almost forgot to mention I've been playing this game called fire emblem 3 houses on switch and it is really fun what a great game. Oh and I made sure I am up to date un my unemployment stuff and I made sure to pay for my classes in Fall 2020. It was weird though my account balance is -4.00 so I somehow have a credit? I must have overpaid last semester by the amount I should have paid this semester AND 4 dollars? That seems unlikely but ok?
    </p>
-   
+ <h3>July 19th, 2020. Day 124.<h3> 
+   <p>This morning I woke up with a headache. I got some coffee but it didn't really help. Then I took a shower, ate some food and drank some water. That helped. Then I watched youtube videos and went to my neighbors. He barbequed again and so he made me a plate! Of course I had a mask and observed social distancing. I also have been reading one of the textbooks for my Fall classes about DNS. I have begun making a presentation about it (basically my way of taking notes). My sister paid for the book so that was pretty cool of her.
+   </p>
            <section id="downloads">
           
         </section>
