--- a/SIP/july.html
+++ b/SIP/july.html
@@ -84,6 +84,12 @@
  <h3>July 19th, 2020. Day 124.<h3> 
    <p>This morning I woke up with a headache. I got some coffee but it didn't really help. Church. Then I took a shower, ate some food and drank some water. That helped. Then I watched youtube videos and went to my neighbors. He barbequed again and so he made me a plate! Of course I had a mask and observed social distancing. I also have been reading one of the textbooks for my Fall classes about DNS. I have begun making a presentation about it (basically my way of taking notes). My sister paid for the book so that was pretty cool of her. I worked on that map for my saturday night dnd game too.
    </p>
+ <h3>July 20th, 2020. Day 125.<h3> 
+   <p>There is talk of allowing salons to do outdoor services but it doesn't sound like it will happen. My eye is still twitching a little. I went to the doctor this morning for a biannual checkup, and everything is fine. There were lots of covid procedures set up, like when I entered the building I had to sanitize my hands, get my temperature taken, answer a ton of questions, while standing in a taped square on the ground. Then inside the office there were clear paths I could walk in. Later I went home and started up the red mercedes and backed it into the driveway so it could air out a little. Then I went to my girlfriend's place and I surprised her with her favorite cake from 85 degrees. Then in the evening we went for a 3 mile walk. We also watched some episodes of brooklyn 99.
+   </p>
+ <h3>July 21st, 2020. Day 126.<h3> 
+   <p>I woke up at 6:30 and spent a hour laying in bed, then at 7:30 I made coffee and studied for 1 hour. at 8:30 I had finished chapter 1 of that textbook and written notes that I can present with slides and stuff.
+   </p>
            <section id="downloads">
           
         </section>
