--- a/SIP/july.html
+++ b/SIP/july.html
@@ -99,7 +99,9 @@
   <h3>July 24th, 2020. Day 129.<h3>  
     <p>So today I unloaded and leveled out all the soil in the backyard, about 24 cubic yards worth. Then my mom and I planted wildflower seeds in it. I wore the same clothes that I wore yesterday when cleaning the unit so they are my dirty clothes now and it seems like a waste to wash them if I know I'm going to need clothes that I don't mind getting dirty. But of course at some point I have to wash them. What a conundrum. Afterwards I had ice cream and fruit to reward myself. Then I presented my DNS presentation to my friend over discord for a good 2 hours. After that I played dnd with my girlfriend and friday group. We saved a city in the elemental plane of air from a mean djinn! 
     </p>
-  
+  <h3>July 25th, 2020. Day 130.<h3>
+    <p>I made coffee this morning then did some more DNS stuff. My sister came over at 10:30 and dropped off her dog for me to dog sit. She got me sushi for lunch as a thank you. I walked Bailey (the dog) and played some pokemon GO. I wrote a letter but didn't finish it to my neighbors that always barbeque me food on Sunday evenings. I want to thank them and I thought a letter would be fitting. I played some chess.
+    </p>
            <section id="downloads">
           
         </section>
