--- a/SIP/july.html
+++ b/SIP/july.html
@@ -104,7 +104,7 @@
     </p>
     <p>Dad joke time! Where does the king keep his armies?</p>
   <h3>July 26th, 2020. Day 131.<h3>
-    <p>The answer to the dad joke is "up his sleeves" hehehe.
+    <p>The answer to the dad joke is "up his sleeves" hehehe. Remember how I told you a long time ago my GPU was broken? Well I replaced it with a backup I had in my closet. It's a 550 ti, that is a 9 year old card, it came out in 2011 and even then it was a budget card. No wonder my computer keep crashing and stuff. Anyways I need to get a new card. I don't have the money to get the same card as my sister, not only has it gone up in price but I haven't been working and thus can't justify buying a card that isn't budget tier. So I think I'm going to buy a 1050 ti, to put that in perspective my sister has a 1660 lol.
     </p>
            <section id="downloads">
           
