--- a/SIP/july.html
+++ b/SIP/july.html
@@ -104,8 +104,11 @@
     </p>
     <p>Dad joke time! Where does the king keep his armies?</p>
   <h3>July 26th, 2020. Day 131.<h3>
-    <p>The answer to the dad joke is "up his sleeves" hehehe. Remember how I told you a long time ago my GPU was broken? Well I replaced it with a backup I had in my closet. It's a 550 ti, that is a 9 year old card, it came out in 2011 and even then it was a budget card. No wonder my computer keep crashing and stuff. Anyways I need to get a new card. I don't have the money to get the same card as my sister, not only has it gone up in price but I haven't been working and thus can't justify buying a card that isn't budget tier. So I think I'm going to buy a 1050 ti, to put that in perspective my sister has a 1660 lol.
+    <p>The answer to the dad joke is "up his sleeves" hehehe. Remember how I told you a long time ago my GPU was broken? Well I replaced it with a backup I had in my closet. It's a 550 ti, that is a 9 year old card, it came out in 2011 and even then it was a budget card. No wonder my computer keep crashing and stuff. Anyways I need to get a new card. I don't have the money to get the same card as my sister, not only has it gone up in price but I haven't been working and thus can't justify buying a card that isn't budget tier. So I think I'm going to buy a 1650 super, it's a budget card. I then did a lot more work in the unit.
     </p>
+ <h3>July 27th, 2020. Day 132.<h3>  
+   <p>My friend has a rhodia book and he let me borrow it to practice calligraphy. This paper is great, there is no bleeding! It's the best paper I have ever put ink on. I did a bunch of calligraphy practice this morning, I wrote quotes and I wrote the first names of everyone I could think of. Then in the afternoon I cut some trim and baseboard so that a cabinet would fit. It was a lot of work that no one will ever notice probably. Like literally 1/8th of an inch cuts but it makes it so the cabinet and the trim are flush and it looks really nice and fits perfect. Then I worked on getting melted plastic off of my girlfriend's pan some more. I said screw it and just used a power sander, it came off easily but still took time and now it looks very shiny and scuffed kind of. Next is to get the burned oil off the pan. The plan is to boil water and white vinegar then add baking soda and let the fizz take care of it. 
+   </p>
            <section id="downloads">
           
         </section>
