--- a/SIP/july.html
+++ b/SIP/july.html
@@ -109,6 +109,9 @@
  <h3>July 27th, 2020. Day 132.<h3>  
    <p>My friend has a rhodia book and he let me borrow it to practice calligraphy. This paper is great, there is no bleeding! It's the best paper I have ever put ink on. I did a bunch of calligraphy practice this morning, I wrote quotes and I wrote the first names of everyone I could think of. Then in the afternoon I cut some trim and baseboard so that a cabinet would fit. It was a lot of work that no one will ever notice probably. Like literally 1/8th of an inch cuts but it makes it so the cabinet and the trim are flush and it looks really nice and fits perfect. Then I worked on getting melted plastic off of my girlfriend's pan some more. I said screw it and just used a power sander, it came off easily but still took time and now it looks very shiny and scuffed kind of. Next is to get the burned oil off the pan. The plan is to boil water and white vinegar then add baking soda and let the fizz take care of it. 
    </p>
+ <h3>July 28th, 2020. Day 133.<h3>    
+   <p>Today I did more calligraphy practice and studied DNS. Then I cleaned the unit bathroom and floor. Then my mom picked up some stuff from home depot. I am super cheap and need two table legs. Well you know what's a super cheap material that I know how to work with? 59 cent bricks. So I got 14 bricks and am gluing them together with silicone construction adhesive, one tube is 2.79. This is like super cheap but that's who I am now. Then I worked on my garage project a little bit. Progress can't really continue though. Then I finished cleaning my girlfriend's pan. I had to use steel wool to get the burnt oil off. It is done now though! All clean! My GPU should arrive sometime before 9pm and I will install it and maybe record a video about resource records in DNS.
+   </p>
            <section id="downloads">
           
         </section>
