--- a/SIP/july.html
+++ b/SIP/july.html
@@ -113,8 +113,10 @@
    <p>Today I did more calligraphy practice and studied DNS. Then I cleaned the unit bathroom and floor. Then my mom picked up some stuff from home depot. I am super cheap and need two table legs. Well you know what's a super cheap material that I know how to work with? 59 cent bricks. So I got 14 bricks and am gluing them together with silicone construction adhesive, one tube is 2.79. This is like super cheap but that's who I am now. Then I worked on my garage project a little bit. Progress can't really continue though. Then I finished cleaning my girlfriend's pan. I had to use steel wool to get the burnt oil off. It is done now though! All clean! My GPU should arrive sometime before 9pm and I will install it and maybe record a video about resource records in DNS. I talked to my girlfriend on the phone while installing drivers. Then I tried to record the video and realized I really do need a script. I was all over the place. That video will never see the light of day.
    </p>
  <h3>July 29th, 2020. Day 134.<h3>  
-   <p>Ran a errand in the morning and stopped at a bakery and got some chocolate croissants. I finished a ornate calligraphy piece for my girlfriend. Someday I'm gonna get fancy inks and the principality nib and nice paper with no gridlines and do some crazy work.
+   <p>Ran a errand in the morning and stopped at a bakery and got some chocolate croissants. I finished a ornate calligraphy piece for my girlfriend. Someday I'm gonna get fancy inks and the principality nib and nice paper with no gridlines and do some crazy work. I worked on my calligraphy and I messed up the last word in a quote. I didn't even mess up the word, I messed up the spacing. I refuse to present it and will redo it tomorrow, sigh. Well this is how you learn, you make mistakes. I will be more vigilant with spacing until it becomes second nature. I played Gloomhaven in the evening with my friends, we only have 3 more scenarios until the end of the game! Tonight's mission was really hard, I died before anyone else and we almost didn't complete it.
    </p>
+ <h3>July 30th, 2020. Day 135.<h3> 
+   <p>
    
            <section id="downloads">
           
