--- a/SIP/july.html
+++ b/SIP/july.html
@@ -116,7 +116,8 @@
    <p>Ran a errand in the morning and stopped at a bakery and got some chocolate croissants. I finished a ornate calligraphy piece for my girlfriend. Someday I'm gonna get fancy inks and the principality nib and nice paper with no gridlines and do some crazy work. I worked on my calligraphy and I messed up the last word in a quote. I didn't even mess up the word, I messed up the spacing. I refuse to present it and will redo it tomorrow, sigh. Well this is how you learn, you make mistakes. I will be more vigilant with spacing until it becomes second nature. I played Gloomhaven in the evening with my friends, we only have 3 more scenarios until the end of the game! Tonight's mission was really hard, I died before anyone else and we almost didn't complete it.
    </p>
  <h3>July 30th, 2020. Day 135.<h3> 
-   <p>
+   <p>I redid that calligraphy piece and I think it is acceptable now. I think I need to work on my horizontal symmetry so I will really focus on that from now on. It is hard, our founding father's must have had a hard time with the Declaration of Independance. Then I rolled up a rug, cut twine, tied it up, and brought it to the backyard so that on August 6th I can give it to Recology. Then I glued some quarter round wood to a cabinet in the unit so that it is nice and flush against the wall and you won't be able to drop a quarter between the cabinet and the wall. I got those 2 brick legs done yesterday and put them in place, then I custom cut foam to shim it in place and that way the wood can't get damaged if pushed because it will be pushed against foam.
+   </p>
    
            <section id="downloads">
           
