--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <h3>Education</h3>
         <p><b>Cinta Aveda Institute — Cosmetology License</b></p> 
-        <p>August 2016 - August 2017>/p>
+        <p>August 2016 - August 2017</p>
           <LI>Cutting, Coloring and styling hair. Chemical treatments. Nails and makeup. Facials and skincare. Blood spill protocols.</LI>
         <p><b>NAMI SF — Mentor on Discharge</b></p> 
           <p>August 2015>/p>
