--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <p>August 2016 - August 2017</p>
           <LI>Cutting, Coloring and styling hair. Chemical treatments. Nails and makeup. Facials and skincare. Blood spill protocols.</LI>
         <p><b>NAMI SF — Mentor on Discharge</b></p> 
-          <p>August 2015>/p>
+          <p>August 2015</p>
           <LI>Facilitating Self-Determination. Launched in conjunction with San Francisco General Hospital. Relevant: Felton Institute PREP group mentor 2015-2016.</LI>
 <p><b>Eastern Washington University — BS in Applied Technology, AA in Network Services & Computing Systems</b></p>
         <p>September 2011 - August 2014</p>
