--- a/SIP/august.html
+++ b/SIP/august.html
@@ -55,7 +55,7 @@
   <p>I made an espresso in the morning and had some instant noodles. I did some overthewire stuff and did piping, grep, base64, rot13 (which i couldn't find a command for so I piped it into a tr) sort, and uniq. I did some calligraphy too. My last textbook came so I have them all now! I also had a ham sandwich. There isn't much to write because I basically just studied all day with breaks intermittently to eat or watch a youtube video.
   </p>
 <h3>August 9th, 2020. Day 145.<h3>  
-  <p>7:30am, espresso and terminal. Today I am doing xxd, mkdir, cp, gzip (zcat), bzip (bcat) and other compression on a hexdump. I got pretty far (I think?) in the problem and then accidentally somehow deleted the temp folder that I had my file in and was working on. I got frustrated and then it was time for church. Then I went for a 2.4 mile walk while chatting with my girlfriend on the phone. I also played pokemon GO and got some pokemon. Then I got back and ate some dessert and then worked on Linux terminal some more.
+  <p>7:30am, espresso and terminal. Today I am doing xxd, mkdir, cp, gzip (zcat), bzip (bzcat) and other compression on a hexdump. I got pretty far (I think?) in the problem and then accidentally somehow deleted the temp folder that I had my file in and was working on. I got frustrated and then it was time for church. Then I went for a 2.4 mile walk while chatting with my girlfriend on the phone. I also played pokemon GO and got some pokemon. Then I got back and ate some dessert and then worked on Linux terminal some more. Ok I got it, I converted the hex dump to binary and changed the file extension from .txt to .bin, it was gzip>bzip2>gzip>tar>tar>bzip2>tar>gzip compressed.
   </p>
     
     
