--- a/SIP/august.html
+++ b/SIP/august.html
@@ -57,6 +57,7 @@
 <h3>August 9th, 2020. Day 145.<h3>  
   <p>7:30am, espresso and terminal. Today I am doing xxd, mkdir, cp, gzip (zcat), bzip (bzcat) and other compression on a hexdump. I got pretty far (I think?) in the problem and then accidentally somehow deleted the temp folder that I had my file in and was working on. I got frustrated and then it was time for church. Then I went for a 2.4 mile walk while chatting with my girlfriend on the phone. I also played pokemon GO and got some pokemon. Then I got back and ate some dessert and then worked on Linux terminal some more. Ok I got it, I converted the hex dump to binary and changed the file extension from .txt to .bin, it was gzip>bzip2>gzip>tar>tar>bzip2>tar>gzip compressed.
   </p>
-    
-    
+<h3>August 10th, 2020. Day 146.<h3>      
+  <p>Woke up and had my coffee. Played some chess then did some telnet and openssl s_client stuff on linux. I also put the drawers back into that cabinet I was working on and I think it's all set now. I broke down a bunch of boxes to recycle and organized some stuff in the garage. Today is garbage night so I will take care of that. Then at 4:30pm I am going to play Gloomhaven with my friends. We only have like 2 or 3 more scenarios before we complete the game! 
+  </p>
     </html>
