--- a/SIP/august.html
+++ b/SIP/august.html
@@ -60,4 +60,11 @@
 <h3>August 10th, 2020. Day 146.<h3>      
   <p>Woke up and had my coffee. Played some chess then did some telnet and openssl s_client stuff on linux. I also put the drawers back into that cabinet I was working on and I think it's all set now. I broke down a bunch of boxes to recycle and organized some stuff in the garage. Today is garbage night so I will take care of that. Then at 4:30pm I am going to play Gloomhaven with my friends. We only have like 2 or 3 more scenarios before we complete the game! Then I spoke to my girlfriend on the phone while she drove home from work :) 
   </p>
+<h3>August 11th, 2020. Day 147.<h3>
+  <p>I worked on some aggresive (-A) nmap to find open ports using SSL so that I could connect. Then some more port stuff. I walked a mile and played pokemon GO. I spoke to my friend for about an hour then played dnd with my girlfriend. The party is in a school academy that is abandoned. However all the automated testing still works so we have to take exams that are graded lol.
+  </p>
+<h3>August 12th, 2020. Day 148.<h3>
+  <p>Today I worked on ssh'ing with a RSA private key and then also using commands in the same command as the ssh. I played some chess then my mom got our home depot order, a door sweep and led light bulbs. The bulb in the laundry area went out so I will replace that and also I will install a door sweep on one of the doors because there is a gap. I also ordered a hacksaw from amazon so that I can cut the door sweep to the correct size.
+  </p>
+  
     </html>
