--- a/string.html
+++ b/string.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <h1>Random Correspondence</h1>
+        <h1>Contained in letter</h1>
         <h2>YOU ARE NOT AUTHORIZED TO BE HERE. CLOSE YOUR BROWSER IMMEDIATELY.</h2>
         <section id="downloads">
           
@@ -29,13 +29,10 @@
 <p>aGFwcHkgYmlydGhkYXkhDQo=
 </p>
 
-<p><font color="purple">
-Thank you for contacting us!<br>
-We will process your inquiry as soon as we can. Please give us 2-3 days to process your inquiry.
-<br><br>
-Your HARIBO team
-</font>
 
+<!--
+lol did you think you would find something that would help you here? come on man if the answer was in the github that would be too easy right? Ok, I'll give you a hint, it's not ROT13 :)
+-->
 
 
 </font>
