--- a/SIP/august.html
+++ b/SIP/august.html
@@ -69,5 +69,8 @@
 <h3>August 13th, 2020. Day 149.<h3> 
   <p>This morning I drank coffee and did some stuff with cron files. First was just looking at the tmp file that it would send data to. Second was looking at a cron shell script to see what it did, then instead of running it executing it line by line with modifications to gain access to a different tmp file. Later my mom and I took two cars to get smog checked for registration, but one didn't pass so now we need to bring it to a mechanic, what a pain. Then my hacksaw arrived! I cut the aluminum door sweep and used scissors to cut the rubber part. Then I screwed it into the door after marking and drilling pilot holes. Later my neighbor called me, he wants to put in a new fence gate for his backyard. He needs a big drill for his drill bit but I only have normal sized drills. Then I ate instant noodles and drank leftover morning coffee.
   </p>
+<h3>August 14th, 2020. Day 150.<h3> 
+  <p>Day 150... Wow. The coffee this morning was very good. We opened a fresh can of cafe du monde. The first few cups from a fresh can are always better than the last few cups. Then I started working on some more terminal stuff but then right as I got in the flow and was writing a shell script the power died! It was scary, pg&e said it wouldn't come back for like 3 hours! I am trying to study here! Finally it went back on about 35 minutes later and I got back to work. I kept having trouble with my shell script and it turns out I forgot a / sigh. Anyways basically on a server they have cron set up to run scripts from a specific directory. So I wrote my own shell script in a /tmp/ folder in vim then copied it to that directory so that cron would run it. The shell script would fetch the password for the next level.
+  </p>
   
     </html>
