--- a/SIP/august.html
+++ b/SIP/august.html
@@ -72,5 +72,7 @@
 <h3>August 14th, 2020. Day 150.<h3> 
   <p>Day 150... Wow. The coffee this morning was very good. We opened a fresh can of cafe du monde. The first few cups from a fresh can are always better than the last few cups. Then I started working on some more terminal stuff but then right as I got in the flow and was writing a shell script the power died! It was scary, pg&e said it wouldn't come back for like 3 hours! I am trying to study here! Finally it went back on about 35 minutes later and I got back to work. I kept having trouble with my shell script and it turns out I forgot a / sigh. Anyways basically on a server they have cron set up to run scripts from a specific directory. So I wrote my own shell script in a /tmp/ folder in vim then copied it to that directory so that cron would run it. The shell script would fetch the password for the next level. Then I went back to my /tmp/ folder and rm all the files and then rmdir my folder. I spoke to my friend who is also taking cyber security classes for a bit. Classes start on Monday! Then I played a level 20 dnd game with my girlfriend and Friday group.
   </p>
-  
+<h3>August 15th, 2020. Day 151.<h3>
+  <p>Espresso with oat milk in the morning. It is hot again today. I woke up pretty early and started studying. I had to google a lot for this most recent problem of brute forcing a port. It wasn't that I couldn't write the thing in python, it was more that I didn't know how to use import socket. I have never used that before. Then I made some instant noodles and watched some Asmongold videos lol.
+  </p>
     </html>
