--- a/SIP/august.html
+++ b/SIP/august.html
@@ -78,4 +78,7 @@
 <h3>August 16th, 2020. Day 152.<h3>
   <p>I woke up to flashes of light that turned out to be lightning at about 3:30am. I sat by my window trying to figure out what it was. Then a downpour started and cold rain hit me and felt really good. But I shut my window because water would damage all my papers and stuff. So then I googled how much energy it would consume to run my ceiling fan all night (pg&e said to use ceiling fans) and it is very cheap so I did it with no guilt and went back to sleep. It is hot. I woke up and had espresso but I think maybe I need another cup. Church with my girlfriend virtually. One of the pastors broke his pinky toe! Later I am going to go to wildseed with my sister and friend. Due to severe social distancing it will be more like we all order ahead from the same restaurant lol. I got vegan spicy sausage pizza, it was good, it had cashew mozzarella. Then I played a game (it costs 4.99) called among us with some internet friends. It is a game of secret identity like mafia and avalon. It was fun!
   </p>
+<h3>August 17th, 2020. Day 153.<h3>
+  <p>Morning coffee, then I played some games then did some studying. Today was about using the git command in terminal to clone a repo on a remote server, then looking at the repo. It was not difficult but I think that's because the next exercise is also git but will be more difficult.
+  </p>
     </html>
