--- a/SIP/august.html
+++ b/SIP/august.html
@@ -90,5 +90,8 @@
 <h3>August 20th, 2020. Day 156.<h3>
   <p>Today I went and got my 3rd hep B shot in Chinatown. Then I went back home and the shop that has the Volvo called and said there is a ton of sludge in the engine, which is pretty weird. Anyways they are gonna try to fix it and maybe it will be done today which I hope it will be. The air quality is bad today but not as bad as yesterday. I then did some self study about git. I used git log, git log -p, git checkout to examine previous commits and other branches to find information.
   </p>
+<h3>August 21st, 2020. Day 157.<h3>
+  <p>Today I finished bandit on overthewire at about 10:30am. I have done a write up for every level. I guess I will start the next but although I am happy I did bandit it didn't really give me what I wanted. I was originially doing a box on htb and after enumerating I knew I needed to fuzz some stuff but didn't know how. I thought bandit would go into that specifically but it did not. It was mainly getting a shell and once you have a shell, navigating through various directories and file systems.
+  </p>
   
     </html>
