--- a/SIP/august.html
+++ b/SIP/august.html
@@ -103,7 +103,7 @@
   <p>I did a whole bunch of studying today and I wrote about it <a href="https://docs.google.com/document/d/1liiG7VPflzIpHrfdOnaf52mMFIejrRGlSUEtHzTmzg4/edit?usp=sharing">here</a>. I talked with some of my internet friends but they were distracting from my studying so I only talked to them when I was taking a break or had hit a wall. I took out the garbage and talked to my girlfriend on the phone for 92 minutes. I tried to learn a game called kingdom death with my friend but its really complicated. I wrote more for this day but it got deleted or I never commited it or something :(
   </p>
 <h3>August 25th, 2020. Day 161.<h3>
-  <p>I woke up and started on this week's homework. I should have started yesterday but I was working on that big project. I did a ton of assignments today and got a lot done. I got 24.5/25 on my first quiz. Tonight I'm going to play dnd with my girlfriend and my Tuesday group.
+  <p>I woke up and started on this week's homework. I should have started yesterday but I was working on that big project. I did a ton of assignments today and got a lot done. I got 24.5/25 on my first quiz. Tonight I'm going to play dnd with my girlfriend and my Tuesday group. I ran out of ink in a pilot G2 that I've been using for like a year. I feel a sense of accomplishment, I didn't lose it and actually used all the ink!
   </p>
   
     </html>
