--- a/whitehat.html
+++ b/whitehat.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <h1>Contained in letter</h1>
+        <h1>My journey to become a whitehat</h1>
         <h2>YOU ARE NOT AUTHORIZED TO BE HERE. CLOSE YOUR BROWSER IMMEDIATELY.</h2>
         <section id="downloads">
           
