--- a/whitehat.html
+++ b/whitehat.html
@@ -29,7 +29,7 @@
 </p>
 <p>August 21st, 2020 - I finished Bandit on OTW
 </p>
-<p>August 24th, 2020 - <a href="https://docs.google.com/document/d/1liiG7VPflzIpHrfdOnaf52mMFIejrRGlSUEtHzTmzg4/edit?usp=sharing" Finished Kioptrix 1</a> (walkthrough required)
+<p>August 24th, 2020 - <a href="https://docs.google.com/document/d/1liiG7VPflzIpHrfdOnaf52mMFIejrRGlSUEtHzTmzg4/edit?usp=sharing"> Finished Kioptrix 1</a> (walkthrough required)
 </p>
 
 
