--- a/whitehat.html
+++ b/whitehat.html
@@ -31,6 +31,8 @@
 </p>
 <p>August 24th, 2020 - <a href="https://docs.google.com/document/d/1liiG7VPflzIpHrfdOnaf52mMFIejrRGlSUEtHzTmzg4/edit?usp=sharing"> Finished Kioptrix 1</a> (walkthrough required)
 </p>
+  <p>August 26th, 2020 -<a href="https://docs.google.com/document/d/1rv_-DOXzS73s84JuGcSZaXKf_pu6oEGg-O4MeqAB5bc/edit?usp=sharing"> Finished Kioptrix 1.1 </a> (walkthrough requried)
+  </p>
 
 
 
