--- a/SIP/august.html
+++ b/SIP/august.html
@@ -105,5 +105,8 @@
 <h3>August 25th, 2020. Day 161.<h3>
   <p>I woke up and started on this week's homework. I should have started yesterday but I was working on that big project. I did a ton of assignments today and got a lot done. I got 24.5/25 on my first quiz. Tonight I'm going to play dnd with my girlfriend and my Tuesday group. I ran out of ink in a pilot G2 that I've been using for like a year. I feel a sense of accomplishment, I didn't lose it and actually used all the ink! What the heck I have this other pen I've been using too and I used it as a replacement and it is out of ink too!
   </p>
+  <h3>August 25th, 2020. Day 161.<h3>
+    <p>Today I did Kioptrix 1.1 I tried my hardest and got maybe 50% through and then had to look at a write up. And good thing I did because I didn't know I could SQL inject with admin '-- and ' and just get in and then create a reverse shell and wget an exploit off my system. Anyways I learned a lot and put it on /whitehat.html you can go check it out if you want. Today I also got put on my school's CPTC team so that should be fun! It is now 1pm and I intend to play some Witcher 3 and record it and make a video.
+    </p>
   
     </html>
