--- a/SIP/august.html
+++ b/SIP/august.html
@@ -109,7 +109,7 @@
     <p>Today I did Kioptrix 1.1 I tried my hardest and got maybe 50% through and then had to look at a write up. And good thing I did because I didn't know I could SQL inject with admin '-- and ' and just get in and then create a reverse shell and wget an exploit off my system. Anyways I learned a lot and put it on /whitehat.html you can go check it out if you want. Today I also got put on my school's CPTC team so that should be fun! It is now 1pm and I intend to play some Witcher 3 and record it and make a video. I did that and wow did I have to learn a lot about blender to be able to censor Yennefer's butt. Then rendering took 2.5 hours. My pc is not built for video editing. I intended to attend my friend's class again tonight but it wasn't live so he and I worked on Kioptrix 1.2 a little bit. I hit a wall again and will sleep on it. I will finish it tomorrow even if I have to look at a write up.
     </p>
 <h3>August 27th, 2020. Day 162.<h3>
-  <p>
+  <p>I did some chores, installed an outdoor motion light, studied and did Kioptrix 1.2. Did more studying and ate instant noodles. Tonight at 4pm is a online job fair associated with my school so I will attend that. Not sure how it will work on zoom though tbh. The only homework I have left for this week is to read chapter 2 and take notes. It shouldn't take me very long. Tomorrow I have a meeting with the CPTC team at 5:30pm then dnd after.
   </p>
   
     </html>
