--- a/whitehat.html
+++ b/whitehat.html
@@ -25,7 +25,7 @@
     
   </body>
 
-<p>August 20th, 2020 - My uni classes began, network security etc
+<p>August 20th, 2020 - My uni classes began, began studying for Sec+
 </p>
 <p>August 21st, 2020 - I finished Bandit on OTW
 </p>
