--- a/whitehat.html
+++ b/whitehat.html
@@ -37,6 +37,10 @@
   </p>
 <p>August 27th, 2020 - <a href="https://docs.google.com/document/d/1PlZK2Y5U5aIGRUP4XaqNlMk1liRz1einfTALA5q8hBM/edit?usp=sharing"> Finished Kioptrix 1.2</a> (walkthrough required)
   </p>
+<p>August 28th, 2020 - <a href="https://docs.google.com/document/d/1Jwk0K7i3A24cPw5GOuucqpEF8WfpiMotTWNev2VgKWk/edit?usp=sharing"> Finished RickdiculouslyEasy</a> (walkthrough almost not required)
+  </p>  
+  
+  
 
 
 
