--- a/whitehat.html
+++ b/whitehat.html
@@ -39,7 +39,10 @@
   </p>
 <p>August 28th, 2020 - <a href="https://docs.google.com/document/d/1Jwk0K7i3A24cPw5GOuucqpEF8WfpiMotTWNev2VgKWk/edit?usp=sharing"> Finished RickdiculouslyEasy</a> (walkthrough almost not required)
   </p>  
-  
+<p>August 29th, 2020 - Fword CTF with team
+  <br>Started "Stapler"
+  <br>Tryhackme with team
+</p>
   
 
 
