--- a/whitehat.html
+++ b/whitehat.html
@@ -41,7 +41,7 @@
   </p>  
 <p>August 29th, 2020 - Fword CTF with team
   <br>Started "Stapler"
-  <br>Tryhackme with team
+  <br>Tryhackme with team, completed "Blue" <a href="https://docs.google.com/document/d/1oe9e-MoCFkV9xgaZCbUZD2QU6Rtdl1w06WfOZ4X7Moo/edit?usp=sharing">
 </p>
   
 
