--- a/SIP/august.html
+++ b/SIP/august.html
@@ -111,5 +111,14 @@
 <h3>August 27th, 2020. Day 162.<h3>
   <p>I did some chores, installed an outdoor motion light, studied and did Kioptrix 1.2. Did more studying and ate instant noodles. Tonight at 4pm is a online job fair associated with my school so I will attend that. Not sure how it will work on zoom though tbh. The only homework I have left for this week is to read chapter 2 and take notes. It shouldn't take me very long. Tomorrow I have a meeting with the CPTC team at 5:30pm then dnd after. I finished reading chapter 2 and taking all my notes. Ok I attended the job fair. Salesforce and some other big names were there but were on a hiring freeze / not actually wanting interns... screw corporations anyways, I went to the breakout room for the SF Living Wage Coalition, I'd rather bleed for the people than bleed for <insert corporation here>. Maybe I shouldn't say this on a public website. I love corporations! Then I talked to my buddy about NOP sleds and buffer overflows.
   </p>
+<h3>August 28th, 2020. Day 163.<h3>
+  <p>Today I studied all day. Then I had a meeting with my CPTC team at 5:30 then dnd afterwards.
+  </p>
+<h3>August 29th, 2020. Day 164.<h3>
+    <p>Today I studied all day. I worked on a box called stapler in the morning, then a CTF with my team at 10am. Then at 4pm I had a zoom meeting with sf living wage to intern there.
+  </p>
+<h3>August 30th, 2020. Day 165.<h3>
+    <p>Today I studied all day. Finished that stapler box, then church with my girlfriend online. Then more studying.
+  </p>
   
     </html>
