--- a/SIP/august.html
+++ b/SIP/august.html
@@ -118,7 +118,7 @@
     <p>Today I studied all day. I worked on a box called stapler in the morning, then a CTF with my team at 10am. Then at 4pm I had a zoom meeting with sf living wage to intern there.
   </p>
 <h3>August 30th, 2020. Day 165.<h3>
-    <p>Today I studied all day. Finished that stapler box, then church with my girlfriend online. Then more studying.
+    <p>Today I studied all day. Finished that stapler box, then church with my girlfriend online. Then more studying. London says that on Tuesday, September 1st, salons can open for outdoor services only. I would say this is a terrible idea but its been 165 days and I need to work...
   </p>
   
     </html>
