--- a/whitehat.html
+++ b/whitehat.html
@@ -43,7 +43,8 @@
   <br>Started "Stapler"
   <br>Tryhackme with team, completed <a href="https://docs.google.com/document/d/1oe9e-MoCFkV9xgaZCbUZD2QU6Rtdl1w06WfOZ4X7Moo/edit?usp=sharing"> "Blue" </a>
 </p>
-  
+<p>August 30th, 2020 - I finished 3 tryhackme rooms, including the pickle rick one.
+</p>  
 
 
 
