--- a/SIP/august.html
+++ b/SIP/august.html
@@ -120,5 +120,9 @@
 <h3>August 30th, 2020. Day 165.<h3>
     <p>Today I studied all day. Finished that stapler box, then church with my girlfriend online. Then more studying. London says that on Tuesday, September 1st, salons can open for outdoor services only. I would say this is a terrible idea but its been 165 days and I need to work... I did more studying and finished some stuff. I talked to my girlfriend for 4 hours and 56 minutes while I ate dinner and studied, she got dinner and prepped a dnd game.
   </p>
+<h3>August 31st, 2020. Day 166.<h3>
+  <p>Today 2 of my other classes started. I attended a live zoom lecture from 11am to 12pm. Then I went to deliver a n95 mask and a face shield to my grandma. In the afternoon I did a lab environment about shell shock and t0rn. At 4:30 I played gloomhaven with my friends.
+  </p>
+  
   
     </html>
