--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <h4 align="right"><a href="http://stuartmrwong.com/SIP/june.html">My June Shelter in Place journal</a></h4>
         <h4 align="right"><a href="http://stuartmrwong.com/SIP/july.html">My July Shelter in Place journal</a></h4>
         <h4 align="right"><a href="http://stuartmrwong.com/SIP/august.html">My August Shelter in Place journal</a></h4>
+        <h4 align="right"><a href="http://stuartmrwong.com/SIP/september.html">My September Shelter in Place journal</a></h4>
         <section id="downloads">
           
         </section>
