--- a/SIP/september.html
+++ b/SIP/september.html
@@ -29,6 +29,6 @@
   </body>
 
  <h3>September 1st, 2020. Day 167.<h3>  
-    <p>I woke up at 4:30am and tossed and turned until 6am. I got my coffee and started studying. I finished reading a chapter and taking notes and posting to canvas at about 10:30am. My brain is fried now. I need a break. Ok what else do I need to do this week for class? I need to do my 1.5.7 network representation lab, then assignements 1.3-1.6. For my net sec class I need to read chapter 3 and take notes. My unix class will release homework tomorrow. I also need to get gas for the volvo and break down cardboard boxes.
+    <p>I woke up at 4:30am and tossed and turned until 6am. I got my coffee and started studying. I finished reading a chapter and taking notes and posting to canvas at about 10:30am. My brain is fried now. I need a break. Ok what else do I need to do this week for class? I need to do my 1.5.7 network representation lab, then assignements 1.3-1.6. For my net sec class I need to read chapter 3 and take notes. My unix class will release homework tomorrow. I also need to get gas for the volvo and break down cardboard boxes. Volvo passed smog today and I carried another 6 yards of soil to the backyard. Ok that counts as a break, time for that lab!
     </p>
     </html>
