--- a/whitehat.html
+++ b/whitehat.html
@@ -45,7 +45,8 @@
 </p>
 <p>August 30th, 2020 - I finished 3 tryhackme rooms, including the pickle rick one.
 </p>  
-
+<p>September, 2020 - Certificate of Training - National Cybersecurity & Communications Integration Center - Industrial Control Systems - US DHS - 
+</p> 
 
 
 
