--- a/whitehat.html
+++ b/whitehat.html
@@ -40,10 +40,11 @@
 <p>August 28th, 2020 - <a href="https://docs.google.com/document/d/1Jwk0K7i3A24cPw5GOuucqpEF8WfpiMotTWNev2VgKWk/edit?usp=sharing"> Finished RickdiculouslyEasy</a> (walkthrough almost not required)
   </p>  
 <p>August 29th, 2020 - Fword CTF with team
-  <br>Started "Stapler"
+  
   <br>Tryhackme with team, completed <a href="https://docs.google.com/document/d/1oe9e-MoCFkV9xgaZCbUZD2QU6Rtdl1w06WfOZ4X7Moo/edit?usp=sharing"> "Blue" </a>
 </p>
 <p>August 30th, 2020 - I finished 3 tryhackme rooms, including the pickle rick one.
+  <br>Finished "Stapler" <walkthrough required>
 </p>  
 <p>September, 2020 - Certificate of Training - National Cybersecurity & Communications Integration Center - Industrial Control Systems - US DHS - 
 </p> 
