--- a/whitehat.html
+++ b/whitehat.html
@@ -28,22 +28,22 @@
 <p>August 20th, 2020 - My uni classes began, began studying for Sec+
 </p>
 <p>August 21st, 2020 - I finished Bandit on OTW
-</p>
-<p>August 24th, 2020 - <a href="https://docs.google.com/document/d/1liiG7VPflzIpHrfdOnaf52mMFIejrRGlSUEtHzTmzg4/edit?usp=sharing"> Finished Kioptrix 1</a> (walkthrough required)
-</p>
-<p>August 26th, 2020 - <a href="https://docs.google.com/document/d/1rv_-DOXzS73s84JuGcSZaXKf_pu6oEGg-O4MeqAB5bc/edit?usp=sharing"> Finished Kioptrix 1.1</a> (walkthrough requried)
+<br>
+<a href="https://docs.google.com/document/d/1liiG7VPflzIpHrfdOnaf52mMFIejrRGlSUEtHzTmzg4/edit?usp=sharing"> Finished Kioptrix 1</a> (walkthrough required)
+<br>
+<a href="https://docs.google.com/document/d/1rv_-DOXzS73s84JuGcSZaXKf_pu6oEGg-O4MeqAB5bc/edit?usp=sharing"> Finished Kioptrix 1.1</a> (walkthrough requried)
     <br>
     I joined my school's CPTC team
-  </p>
-<p>August 27th, 2020 - <a href="https://docs.google.com/document/d/1PlZK2Y5U5aIGRUP4XaqNlMk1liRz1einfTALA5q8hBM/edit?usp=sharing"> Finished Kioptrix 1.2</a> (walkthrough required)
-  </p>
-<p>August 28th, 2020 - <a href="https://docs.google.com/document/d/1Jwk0K7i3A24cPw5GOuucqpEF8WfpiMotTWNev2VgKWk/edit?usp=sharing"> Finished RickdiculouslyEasy</a> (walkthrough almost not required)
-  </p>  
-<p>August 29th, 2020 - Fword CTF with team
+ <br>
+<a href="https://docs.google.com/document/d/1PlZK2Y5U5aIGRUP4XaqNlMk1liRz1einfTALA5q8hBM/edit?usp=sharing"> Finished Kioptrix 1.2</a> (walkthrough required)
+ <br>
+<a href="https://docs.google.com/document/d/1Jwk0K7i3A24cPw5GOuucqpEF8WfpiMotTWNev2VgKWk/edit?usp=sharing"> Finished RickdiculouslyEasy</a> (walkthrough almost not required)
+ <br> 
+Fword CTF with team
   
   <br>Tryhackme with team, completed <a href="https://docs.google.com/document/d/1oe9e-MoCFkV9xgaZCbUZD2QU6Rtdl1w06WfOZ4X7Moo/edit?usp=sharing"> "Blue" </a>
-</p>
-<p>August 30th, 2020 - I finished 3 tryhackme rooms, including the pickle rick one.
+<br>
+I finished 3 tryhackme rooms, including the pickle rick one.
   <br>Finished "Stapler" <walkthrough required>
 </p>  
 <p>September, 2020 - Certificate of Training - National Cybersecurity & Communications Integration Center - Industrial Control Systems - US DHS - 
