--- a/whitehat.html
+++ b/whitehat.html
@@ -25,9 +25,9 @@
     
   </body>
 
-<p>August 20th, 2020 - My uni classes began, began studying for Sec+
-</p>
-<p>August 21st, 2020 - I finished Bandit on OTW
+<p>August, 2020 - My uni classes began, began studying for Sec+
+<br>
+I finished Bandit on OTW
 <br>
 <a href="https://docs.google.com/document/d/1liiG7VPflzIpHrfdOnaf52mMFIejrRGlSUEtHzTmzg4/edit?usp=sharing"> Finished Kioptrix 1</a> (walkthrough required)
 <br>
