--- a/whitehat.html
+++ b/whitehat.html
@@ -17,6 +17,7 @@
       <div class="container">
         <h1>My journey to become a whitehat</h1>
         <h2>YOU ARE NOT AUTHORIZED TO BE HERE. CLOSE YOUR BROWSER IMMEDIATELY.</h2>
+        <script src="https://tryhackme.com/badge/160267"></script>
         <section id="downloads">
           
         </section>
@@ -46,7 +47,8 @@ Fword CTF with team
 I finished 3 tryhackme rooms, including the pickle rick one.
   <br>Finished "Stapler" <walkthrough required>
 </p>  
-<p>September, 2020 - Certificate of Training - National Cybersecurity & Communications Integration Center - Industrial Control Systems - US DHS - 
+<p>September, 2020 - Certificate of Training - National Cybersecurity & Communications Integration Center - Industrial Control Systems - US DHS 
+  <br>More tryhackme
 </p> 
 
 
