--- a/SIP/september.html
+++ b/SIP/september.html
@@ -36,4 +36,7 @@
    </p>
    <p>I did a whole bunch of studying today and got gas for the car. Then I had a meeting with sf living wage and I helped troubleshoot their NAS! I got the internship there but it is more sys admin than it is penetration but that's ok because no one had penetration internships. Lots more studying then I talked to my girlfriend on the phone a little bit.
    </p>
+ <h3>September 3rd, 2020. Day 169.<h3> 
+   <p>Lots of studying, mainly reading and taking notes today. Did a room on THM. Studied some more. Played a video game. I have all my homework done now. Gonna practice with my CPTC team tonight.
+   </p>
     </html>
