--- a/SIP/september.html
+++ b/SIP/september.html
@@ -37,6 +37,9 @@
    <p>I did a whole bunch of studying today and got gas for the car. Then I had a meeting with sf living wage and I helped troubleshoot their NAS! I got the internship there but it is more sys admin than it is penetration but that's ok because no one had penetration internships. Lots more studying then I talked to my girlfriend on the phone a little bit.
    </p>
  <h3>September 3rd, 2020. Day 169.<h3> 
-   <p>Lots of studying, mainly reading and taking notes today. Did a room on THM. Studied some more. Played a video game. I have all my homework done now. Gonna practice with my CPTC team tonight.
+   <p>Lots of studying, mainly reading and taking notes today. Did a room on THM. Studied some more. Played a video game. I have all my homework done now. Gonna practice with my CPTC team tonight. We did a box called Ice. It went well and I learned a lot.
+   </p>
+ <h3>September 4th, 2020. Day 170.<h3> 
+   <p>Today I am going over to my girlfriends place. We are going to get bulgogi for lunch and then play dnd at night. 
    </p>
     </html>
