--- a/SIP/september.html
+++ b/SIP/september.html
@@ -40,6 +40,10 @@
    <p>Lots of studying, mainly reading and taking notes today. Did a room on THM. Studied some more. Played a video game. I have all my homework done now. Gonna practice with my CPTC team tonight. We did a box called Ice. It went well and I learned a lot.
    </p>
  <h3>September 4th, 2020. Day 170.<h3> 
-   <p>Today I am going over to my girlfriends place. We are going to get bulgogi for lunch and then play dnd at night. 
+   <p>Today I am going over to my girlfriends place. We are going to get bulgogi for lunch and then play dnd at night. It was really fun, the story is doing my arc now so I got a magical sword and beat up my bully of a brother. We learned more about my backstory too!
    </p>
+<h3>September 5th, 2020. Day 171.<h3> 
+  <p>Studying while side by side with my girlfriend on her sofa. I studied OWASP ZAP, nikto, and some networking stuff.
+  </p>
+  
     </html>
