--- a/SIP/september.html
+++ b/SIP/september.html
@@ -43,7 +43,7 @@
    <p>Today I am going over to my girlfriends place. We are going to get bulgogi for lunch and then play dnd at night. It was really fun, the story is doing my arc now so I got a magical sword and beat up my bully of a brother. We learned more about my backstory too!
    </p>
 <h3>September 5th, 2020. Day 171.<h3> 
-  <p>Studying while side by side with my girlfriend on her sofa. I studied OWASP ZAP, nikto, and some networking stuff.
+  <p>Studying while side by side with my girlfriend on her sofa. I studied OWASP ZAP, nikto, and some networking stuff. She studied in MATLAB the whole day and I studied in my kali box the whole day. I took a break to go pick up lunch for us and to browse reddit. It was really hot today. Like not the hottest it has ever been but really very hot. 95 I think. Then in the evening we played dungeons and dragons and drank cold beverages.
   </p>
   
     </html>
